# image_processing_project

./: CMakeLists.txt
src/: main.cpp
